feat: expand e2e tests for auth.controller and add new migration file
